# mcp-temporal-agents

./: .env.test  LICENSE  README.md  config.py  pyproject.toml
.github/workflows/: tests.yaml
example/: workflows.py
example/mcp_server/: main.py
example/openai_agents/: financial_research_manager.py  models.py
example/temporal/: helpers.py  workflows.py
examples/: main.py  worker.py
examples/financial_agents/: helpers.py  models.py
examples/financial_research_agent/: main.py  models.py  utils.py
examples/financial_research_agent/openai_agents/: financials_agent.py  finiancials_agent.py  planner_agent.py  risk_agent.py  verifier_agent.py  writer_agent.py
examples/financial_research_agent/temporal/: activities.py  worker.py  workflows.py
examples/mcp_server/: main.py
examples/tasks/: activities.py  workflows.py
src/: config.py
